k8s/services/jellyfin/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        platform.io/type: secondary
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
          resources:
            limits:
              amd.com/gpu: 1
          volumeMounts:
            - name: data
              mountPath: /data
            - name: data
              mountPath: /config/data/data/subtitles
              subPath: metadata/subtitles
            - name: cache
              mountPath: /cache
            - name: config
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: cache
          persistentVolumeClaim:
            claimName: cache-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  labels:
    app: seerr
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        platform.io/pi: pi-2
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr-config-pvc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.rvserver.online`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-lan

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.home`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  selector:
    app: seerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.rvserver.online`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
